--- a/module-01/index.html
+++ b/module-01/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <article>
-            <img src="./images/1.jpg" alt="девушка в толпе">
+            <img src="./images/1.jpg" height="280" width="420" alt="девушка в толпе">
             <div>lifestyle</div>
             <h2>More than just a music festival</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores, voluptatibus molestiae culpa qui laborum
@@ -43,7 +43,7 @@
         </article>
         <article>
 
-            <img src="./images/2.jpg" alt="чашка кофе в руках, одетых в варежки">
+            <img src="./images/2.jpg" height="280" width="420" alt="чашка кофе в руках, одетых в варежки">
             <div>lifestyle</div>
             <h2>Life tastes better with coffe</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis, ullam doloribus quisquam nobis dolorum
@@ -54,7 +54,7 @@
                 similique sit inventore voluptatum ipsum et!</p>
         </article>
         <article>
-            <img src="./images/3.jpg" alt="девушки на фоне моста">
+            <img src="./images/3.jpg" height="280" width="420" alt="девушки на фоне моста">
             <div> photodiary</div>
             <h2>American dream</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias facilis in nulla quibusdam beatae, natus dolorum
@@ -66,7 +66,7 @@
         </article>
 
         <article>
-            <img src="./images/4.jpg" alt="человек в куртке и шапке в тумане">
+            <img src="./images/4.jpg" height="280" width="420" alt="человек в куртке и шапке в тумане">
             <div> photodiary</div>
             <h2>A day exploring the Alps</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quasi sunt veniam laboriosam recusandae assumenda
@@ -79,10 +79,8 @@
             </p>
 
         </article>
-    </main>
-    <footer>
         <button>load more</button>
-    </footer>
+    </main>   
 </body>
 
 </html>
