--- a/module-01/index.html
+++ b/module-01/index.html
@@ -31,7 +31,7 @@
     <main>
         <article>
             <img src="./images/1.jpg" height="280" width="420" alt="девушка в толпе">
-            <div>lifestyle</div>
+            <p>lifestyle</p>
             <h2>More than just a music festival</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores, voluptatibus molestiae culpa qui laborum
                 odit minima earum odio commodi labore a dicta quo perferendis quia fugit, saepe consectetur quisquam natus
@@ -44,7 +44,7 @@
         <article>
 
             <img src="./images/2.jpg" height="280" width="420" alt="чашка кофе в руках, одетых в варежки">
-            <div>lifestyle</div>
+            <p>lifestyle</p>
             <h2>Life tastes better with coffe</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis, ullam doloribus quisquam nobis dolorum
                 aliquam magnam atque dolor ipsa nesciunt quod, saepe autem nihil praesentium alias assumenda excepturi! Quaerat
@@ -55,7 +55,7 @@
         </article>
         <article>
             <img src="./images/3.jpg" height="280" width="420" alt="девушки на фоне моста">
-            <div> photodiary</div>
+            <p> photodiary</p>
             <h2>American dream</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias facilis in nulla quibusdam beatae, natus dolorum
                 numquam non minus dolore expedita enim quia voluptates perferendis laudantium labore incidunt deleniti animi
@@ -67,7 +67,7 @@
 
         <article>
             <img src="./images/4.jpg" height="280" width="420" alt="человек в куртке и шапке в тумане">
-            <div> photodiary</div>
+            <p> photodiary</p>
             <h2>A day exploring the Alps</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quasi sunt veniam laboriosam recusandae assumenda
                 nam consequatur autem maiores corporis! Labore sequi magnam laborum obcaecati accusantium illum dignissimos
